added RoleController and mapper